--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.3.17",
     "jodit-react": "^4.1.2",
+    "jspdf": "^2.5.2",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.2",
     "react": "^18.3.1",
