--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "react-bootstrap": "^2.10.4",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.2.0",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-image-crop": "^11.0.7",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
     "sweetalert2": "^11.12.4"
