--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-icons": "^5.2.1",
     "react-image-crop": "^11.0.7",
     "react-router-dom": "^6.25.1",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^10.0.5",
     "sweetalert2": "^11.12.4"
   },
